<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/forgot_password_fragment_layout"
        android:layout_gravity="center"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/home_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/lbl_forgot_password"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/forgot_password_msg"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/forgot_password_page_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Enter email id"
                android:inputType="textEmailAddress" />

            <!-- Login Button -->

            <Button
                android:id="@+id/forgot_password_page_btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_reset_password"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/forgot_password_page_btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@null"
                android:text="@string/btn_back"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>